force-app/main/default/objects/Mailchimp_Batch_Operation__c/Mailchimp_Batch_Operation__c.object-meta.xml
<CustomObject>
    <description>Tracks the status of a batch operation submitted to Mailchimp.</description>
    <label>Mailchimp Batch Operation</label>
    <nameField>
        <label>Mailchimp Batch Operation ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp Batch Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>