force-app/main/default/objects/Mailchimp_Batch_Operation__c/fields/Errored_Operations__c.field-meta.xml
<CustomField>
    <fullName>Errored_Operations__c</fullName>
    <label>Errored Operations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>