force-app/main/default/objects/Mailchimp_Batch_Operation__c/fields/Finished_Operations__c.field-meta.xml
<CustomField>
    <fullName>Finished_Operations__c</fullName>
    <label>Finished Operations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>