force-app/main/default/objects/Mailchimp_Batch_Operation__c/fields/Response_Body_URL__c.field-meta.xml
<CustomField>
    <fullName>Response_Body_URL__c</fullName>
    <description>The URL of the gzipped archive of the results of all the operations. Only available for 10 minutes after the batch completes.</description>
    <label>Response Body URL</label>
    <type>Url</type>
</CustomField>