force-app/main/default/objects/Mailchimp_Batch_Operation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;pending&quot;</defaultValue>
    <description>The status of the batch call.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>preprocessing</fullName>
            </value>
            <value>
                <fullName>started</fullName>
            </value>
            <value>
                <fullName>finalizing</fullName>
            </value>
            <value>
                <fullName>finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>