force-app/main/default/objects/Mailchimp_Batch_Operation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Submitted_At__c</columns>
    <columns>Status__c</columns>
    <columns>Completed_At__c</columns>
    <columns>Finished_Operations__c</columns>
    <columns>Errored_Operations__c</columns>
    <columns>Total_Operations__c</columns>
    <columns>Response_Body_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>